# simulation-hypothesis-math-framework

./: .gitignore  CITATION.cff  LICENSE  README.md  REFERENCES.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: assumptions.md  falsifiability_observables.md  index.md  limitations.md  mathematical_model.md  physical_bounds.md  references.bib
src/shmf/epistemology/: bayes.py
src/shmf/mathematical_foundations/: budgeted.py  nested.py  stochastic.py
src/shmf/physics_constraints/: limits.py
src/shmf/simulation_detection/: artifacts.py  stats.py
tests/: test_artifacts.py  test_bayes.py  test_budgeted.py  test_detection_stats.py  test_limits.py  test_nested.py  test_stochastic.py
