[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation-hypothesis-math-framework"
version = "1.0.0"
description = "A scientific Python framework for mathematical and physical analysis of the Simulation Hypothesis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Oscar Fuentes Fernandez" }]
dependencies = ["numpy>=1.26", "scipy>=1.11"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["E203"]
select = ["E","F","I","B","UP","N"]

